fix(worker+auth): corrige NPE do import em lote, melhora Fila e login
Worker:
- Corrige NullPointerException no import em lote (confidence() usava List.of com
  titulo do AniList nulo -> quebrava com animes sem english/native). Troca por
  Arrays.asList, aproveitando o skip de null que ja existia.
- ApiExceptionHandler passa a logar o stacktrace dos 500 (antes engolia sem log).

Fila (AdminWorkerQueue):
- Aprovar + publicar em lote (checkbox, selecionar matched/aprovaveis).
- Correcao manual de match nos itens em review via busca AniList ao vivo
  (reaproveita AniListSearchPanel), preservando o numero do episodio.

Auth (login):
- "Lembrar de mim" agora funcional: marcado -> localStorage (persiste ao fechar
  o navegador), desmarcado -> sessionStorage (some ao fechar a aba).
- Hardening multi-aba: nao desloga aba secundaria quando outra ja rotacionou o
  refresh token (single-use) - adota a sessao mais recente do storage.

Inclui melhorias pre-existentes ja em execucao: dedup de releases no worker,
config do RSS poll, flyway ignore-migration-patterns e templates de env.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>